renamed default app directory

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 
 # You can specify any other directory where your code is placed.
 # But it is a good practice to place docker setup along with the project. In this way you can modify the setup as you want.
-APP_PATH=./app
+APP_PATH=./src
 
 # MySQL setup
 MYSQL_ROOT_PASSWORD=sample123
