--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,6 @@ MYSQL_ROOT_PASSWORD=sample123
 MYSQL_DATABASE=sample_db
 MYSQL_USER=user
 MYSQL_PASSWORD=password
+
+# Docker compose variables
+COMPOSE_PROJECT_NAME=symfonyproject
